--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,13 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "type": "node",
-      "request": "launch",
       "name": "Launch Program",
+      "program": "${workspaceFolder}/server/src/index.js",
+      "request": "launch",
       "skipFiles": ["<node_internals>/**"],
-      "program": "${workspaceFolder}\\server/src/index.js"
+      "type": "pwa-node",
+      "envFile": "${workspaceFolder}/server/.env.local",
+      "runtimeExecutable": "/Users/kapekost/.nvm/versions/node/v12.12.0/bin/node"
     }
   ]
 }
