--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "test": "mocha test/",
+    "dev" : "nodemon src/index.js",
     "start": "node src/index.js"
   },
   "author": "",
